<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.greact</groupId>
    <artifactId>greact-plugin</artifactId>
    <version>0.0.1</version>
    <properties>
        <java.version.release>14</java.version.release>
        <java.version>1.${java.version.release}</java.version>
    </properties>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
<!--                    <release>${java.version.release}</release>-->
<!--                    <compilerVersion>${java.version}</compilerVersion>-->
<!--                    <source>${java.version}</source>-->
<!--                    <target>${java.version}</target>-->
                    <source>14</source>
                    <target>14</target>
                    <encoding>UTF-8</encoding>
                    <compilerArgs>
                        <compilerArg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</compilerArg>
                        <compilerArg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</compilerArg>
                        <compilerArg>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</compilerArg>
                        <compilerArg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</compilerArg>
                        <compilerArg>--enable-preview</compilerArg>
                        <compilerArg>-J--enable-preview</compilerArg>
<!--                        <compilerArg>-J&#45;&#45;enable-preview</compilerArg>-->
                    </compilerArgs>
                    <fork>true</fork>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <forkMode>once</forkMode>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.6.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>